| Summary: | ASTERISK-29303: pjsip: Re-invite occurs when it shouldn't | ||
| Reporter: | Benjamin Keith Ford (bford) | Labels: | |
| Date Opened: | 2021-02-19 09:55:21.000-0600 | Date Closed: | 2021-02-25 08:45:55.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 16.16.1 18.2.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Asterisk will send an unnecessary re-invite if you put a call on hold and the codecs are not configured to be the same on the two endpoints. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-02-25 08:45:56.531-0600 Change 15431 merged by George Joseph: res_pjsip_session.c: Check topology on re-invite. [https://gerrit.asterisk.org/c/asterisk/+/15431|https://gerrit.asterisk.org/c/asterisk/+/15431] By: Friendly Automation (friendly-automation) 2021-02-25 08:46:21.939-0600 Change 15429 merged by George Joseph: res_pjsip_session.c: Check topology on re-invite. [https://gerrit.asterisk.org/c/asterisk/+/15429|https://gerrit.asterisk.org/c/asterisk/+/15429] By: Friendly Automation (friendly-automation) 2021-02-25 08:46:49.831-0600 Change 15445 merged by George Joseph: res_pjsip_session.c: Check topology on re-invite. [https://gerrit.asterisk.org/c/asterisk/+/15445|https://gerrit.asterisk.org/c/asterisk/+/15445] By: Friendly Automation (friendly-automation) 2021-02-25 08:48:52.808-0600 Change 15430 merged by George Joseph: res_pjsip_session.c: Check topology on re-invite. [https://gerrit.asterisk.org/c/asterisk/+/15430|https://gerrit.asterisk.org/c/asterisk/+/15430] | ||